--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   },
   "dependencies": {
     "@types/styled-components": "^5.1.34",
+    "i18next": "^23.12.2",
+    "i18next-resources-to-backend": "^1.2.1",
     "next": "^14.2.4",
+    "next-i18n-router": "^5.5.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-i18next": "^15.0.0",
     "react-icons": "^5.2.1",
     "sharp": "^0.33.4",
     "styled-components": "^6.1.11"
