--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/styled-components": "^5.1.34",
     "next": "^14.2.4",
+    "next-intl": "^3.19.4",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
