--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/styled-components": "^5.1.34",
+    "mongodb": "^6.9.0",
+    "mongoose": "^8.7.0",
     "next": "^14.2.4",
     "react": "^18",
     "react-dom": "^18",
