--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,21 @@
 {
+  "env": {
+    "browser": true,
+    "es2021": true,
+    "node": true,
+    "cypress/globals": true
+  },
   "extends": [
     "next",
     "next/core-web-vitals",
-    "eslint:recommended"
+    "eslint:recommended",
+    "plugin:cypress/recommended"
   ],
-  "rules": {
-  
-  }
+  "parser": "@typescript-eslint/parse",
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "sourceType": "module"
+  },
+  "plugins": ["@typescript-eslint", "cypress"],
+  "rules": {}
 }
