--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "cypress:open": "cypress open",
+    "e2e": "start-server-and-test dev 3000 \"cypress run --e2e\"",
+    "e2e:headless": "start-server-and-test dev 3000 \"cypress run --e2e\""
   },
   "dependencies": {
     "@types/styled-components": "^5.1.34",
@@ -24,13 +27,17 @@
     "@babel/core": "^7.24.7",
     "@babel/preset-env": "^7.24.7",
     "@babel/preset-react": "^7.24.7",
+    "@types/cypress": "^1.1.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "babel-loader": "^9.1.3",
     "babel-plugin-styled-components": "^2.1.4",
+    "cypress": "^13.15.0",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.4",
+    "eslint-plugin-cypress": "^3.5.0",
+    "start-server-and-test": "^2.0.8",
     "typescript": "^5"
   }
 }
